# advent-of-code-2020

./: .gitignore  pyproject.toml
advent_of_code_2020/: __main__.py
advent_of_code_2020/day01/: __init__.py  test_day01.py
advent_of_code_2020/day02/: __init__.py  test_day02.py
advent_of_code_2020/day03/: __init__.py  test_day03.py
advent_of_code_2020/day04/: __init__.py  test_day04.py
advent_of_code_2020/day05/: __init__.py  test_day05.py
advent_of_code_2020/day06/: __init__.py  test_day06.py
advent_of_code_2020/day07/: __init__.py  test_day07.py
advent_of_code_2020/day08/: __init__.py  test_day08.py
advent_of_code_2020/day09/: __init__.py  test_day09.py
advent_of_code_2020/day10/: __init__.py  test_day10.py
advent_of_code_2020/day11/: __init__.py  test_day11.py
advent_of_code_2020/day12/: __init__.py  test_day12.py
advent_of_code_2020/day13/: __init__.py  test_day13.py
advent_of_code_2020/day14/: __init__.py  test_day14.py
advent_of_code_2020/day15/: __init__.py  test_day15.py
advent_of_code_2020/day16/: __init__.py  test_day16.py
advent_of_code_2020/day17/: __init__.py  test_day17.py
advent_of_code_2020/day18/: __init__.py  test_day18.py
advent_of_code_2020/day19/: __init__.py  test_day19.py
advent_of_code_2020/day20/: __init__.py  test_day20.py
advent_of_code_2020/day22/: __init__.py  test_day22.py
advent_of_code_2020/day23/: __init__.py  test_day23.py
advent_of_code_2020/day24/: __init__.py  test_day24.py
advent_of_code_2020/day25/: __init__.py  test_day25.py
