[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.2"
description = ""
authors = ["Kevin Ng <kevin@ngzhk.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
