[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.3"
description = "Advent of Code 2020 solutions"
authors = ["Kevin Ng <kevin@ngzhk.net>"]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"
schema = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
